# zoo-tauri

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: frontend-pr.yml  macos-build.yml  sync-zoo-upstream.yml  windows-build.yml
docs/: agent-index.md  repo-overview.md  upstream-sync.md
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/components/editor/: GantryEditor.tsx
frontend/src/components/gantry/: CalibrationWizard.tsx  GantryPositionWidget.tsx
frontend/src/types/: index.ts
progress/: 2026-05-13-gantry-calibration-ui.md
scripts/: package_backend.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_deck_router.py  test_gantry_router.py
zoo/: app.py  desktop_backend.py
zoo/models/: gantry.py
zoo/routers/: deck.py  gantry.py
