[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "zoo"
version = "0.1.0"
description = "Web visualization for CubOS"
requires-python = ">=3.11"
dependencies = [
    "cubos @ git+https://github.com/Ursa-Laboratories/CubOS.git@staging",
    "fastapi>=0.115",
    "godirect>=1.2.1",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
